UPDATE: Guest checkout verify OTP, avoiding spam
